--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
 h1 {
     margin: 0;
     font-size: 48px;
-    font-weight: bold;
+    font-weight: bolder;
     color: #f9faf8;
     margin-bottom: 8px;
 }
@@ -77,4 +77,39 @@ a {
     text-decoration: none;
     font-size: 18px;
     color: #e5e7eb;
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 64px;
+    align-items: center;
+    height: 450px;
+}
+
+.block {
+    width: 150px;
+    height: 150px;
+    border: #3882f6 solid 4px;
+    border-radius: 10%;
+}
+
+.item {
+    width: 150px;
+    height: 200px;
+    text-align: center;
+    color: gray;
+}
+
+.items {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
 }
